Added backdrop filter blur to header on phone scroll

--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -241,6 +241,8 @@ h1::-moz-selection {
         }
 
         #header {
+            -webkit-backdrop-filter: blur(2px);
+            backdrop-filter: blur(2px);
             position: sticky;
             width: 100%;
             max-height: 60px;
