--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -199,8 +199,7 @@ h1::-moz-selection {
 
 #sidebar-text {
     padding-top: 1em;
-    margin: 0 auto;
-    margin-bottom: 20px;
+    margin: 0 20px auto auto;
     width: 80%;
     line-height: 150%;
     font-family: 'Cambria', 'Georgia', 'Times', 'serif';
@@ -246,6 +245,11 @@ h1::-moz-selection {
             padding: 5px 0;
         }
 
+        h2 {
+            font-size: 2em;
+            margin: 40px auto;
+        }
+
         #header {
             -webkit-backdrop-filter: blur(2px);
             backdrop-filter: blur(2px);
@@ -267,11 +271,17 @@ h1::-moz-selection {
         }
         
         #sidebar {
+            border-radius: unset;
+            border-top: 2px solid black;
             width: 100%;
             height: max-content;
             background-color: transparent;
             grid-column: 1 / span 1;
             grid-row: 3 / span 1;
+        }
+
+        #sidebar-text {
+            padding-top: 0;
         }
     }
 }
